--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
+    "@supabase/supabase-js": "^2.91.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.0",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.552.0",
     "next": "15.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^6.8.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
